--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Malla Psicología</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <h1>Malla Interactiva - Psicología</h1>
+  <p class="instrucciones">Haz clic en un ramo para marcarlo como aprobado. Los ramos con requisitos estarán bloqueados hasta que se cumplan.</p>
+  <div id="malla" class="grid-malla"></div>
+  <button onclick="resetMalla()">Reiniciar malla</button>
+  <script src="script.js"></script>
+</body>
+</html>
